Rework and simplify key capabilities for the APIs

--- a/site/reference/validmind-rest-apis.qmd
+++ b/site/reference/validmind-rest-apis.qmd
@@ -37,34 +37,14 @@ This version of the API is **v1**, specified in the path (`/vm/api/v1`). Future 
 
 ### Key capabilities
 
-- **Model inventory management**  
-  Retrieve, filter, create, and update models.  
-  Supports querying by tiering, owners, validators, status, and more.  
-  Supports exporting model data as JSON or CSV.
-
-- **Group and access control**  
-  List, create, and manage access groups.  
-  Add or remove users and resources to/from groups.  
-  Filter by default groups and apply sorting.
-
-- **Business unit management**  
-  Retrieve and manage business units associated with the organization.  
-  Supports filtering, search, and pagination.
-
-- **Template access**  
-  Retrieve available templates used for model documentation and validation.  
-  Includes support for fetching template metadata and default structures.
-
-- **Use case management**  
-  Create and organize use cases and use case categories.  
-  Supports sorting, filtering, and hierarchical structures.
-
-- **Field masking for optimized responses**  
-  Use the `X-Fields` header to control which fields are returned in API responses.  
-  Useful for minimizing payload size and tailoring data for frontend consumption.
-
-- **Health and authentication checks**  
-  Basic endpoints to validate authentication (`/test-auth`) and check service status (`/health`).
+- Model inventory management
+- Group and access control
+- Business unit organization
+- Template management
+- Use case categorization
+- Data export and filtering
+- System health checks
+- Secure API access
 
 ## ValidMind Admin API
 
@@ -83,18 +63,12 @@ This version of the API is **v1**, specified in the path (`/admin/api/v1`). Futu
 
 ### Key capabilities
 
-- **Organization management**
-  - Create, update, and retrieve organizations
-  - Bootstrap an initial organization with default configuration
-  - Fetch or upload default templates and configuration data
-
-- **User management**
-  - Create and update users and admin users
-  - Assign roles and organizations
-  - Regenerate user API credentials
-
-- **System bootstrap**
-  - One-time initialization of a base organization, admin user, and default data
+- Organization management
+- User management
+- System bootstrap
+- Usage monitoring
+- Template management
+- Secure restricted API access
 
 :::
 
