Simplify key capabilities further to match how the API reference appears

--- a/site/reference/validmind-rest-apis.qmd
+++ b/site/reference/validmind-rest-apis.qmd
@@ -37,14 +37,13 @@ This version of the API is **v1**, specified in the path (`/vm/api/v1`). Future 
 
 ### Key capabilities
 
-- Model inventory management
-- Group and access control
-- Business unit organization
-- Template management
-- Use case categorization
-- Data export and filtering
-- System health checks
-- Secure API access
+The API provides functionality for working with:
+
+- Models
+- Groups
+- Business units
+- Use cases
+- Templates
 
 ## ValidMind Admin API
 
@@ -63,12 +62,11 @@ This version of the API is **v1**, specified in the path (`/admin/api/v1`). Futu
 
 ### Key capabilities
 
-- Organization management
-- User management
-- System bootstrap
-- Usage monitoring
-- Template management
-- Secure restricted API access
+The API provides functionality for working with:
+
+- Organizations
+- Users
+- Usage information
 
 :::
 
