--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -10,6 +10,8 @@ bread-crumbs: false
 
 <rapi-doc 
     spec-url="https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json"
+    server-url="https://api.dev.vm.validmind.ai/vm/api/v1/"
+    default-api-server="https://api.dev.vm.validmind.ai/vm/api/v1/"
     show-header="false"
     theme="light"
     load-fonts="true"
