--- a/site/reference/admin-api.qmd
+++ b/site/reference/admin-api.qmd
@@ -8,6 +8,7 @@ bread-crumbs: false
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 <rapi-doc 
     spec-url="https://api.dev.vm.validmind.ai/admin/api/v1/swagger.json"
+    server-url="https://api.dev.vm.validmind.ai/admin/api/v1/"
     show-header="false"
     theme="light"
     load-fonts="true"
