Variables 1st pass

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -436,7 +436,7 @@ td {
 Setup + Administration
 :::
 
-[Invite users and control access to ValidMind by managing user roles, groups, and permissions.]{.mid-gray .f4}
+[Invite users and control access to {{< var vm.product >}} by managing user roles, groups, and permissions.]{.mid-gray .f4}
 
 [**Setup QuickStart**](/get-started/administrator/quickstart-administrator.qmd){.button .button-green}
 :::
@@ -483,11 +483,11 @@ Model Validation
 ::: { .w-80-ns}
 
 ::: {.f3 .b}
-ValidMind [Tour]{.pink}
+{{< var vm.product >}} [Tour]{.pink}
 :::
 
 ::: {.pl2 .pr2 .nt2 .mid-gray .f5}
-ValidMind is a platform that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.
+{{< var vm.product >}} is a platform that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.
 :::
 
 ::: {.nt3}
@@ -519,10 +519,10 @@ ValidMind is a platform that helps identify AI and LLM risks while generating re
 ::: {.w-40-ns .pl4}
 
 ::: {.f3 .b}
-ValidMind [Academy]{.pink}
+{{< var vm.product >}} [Academy]{.pink}
 :::
 
-[Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.]{.mid-gray}
+[Gain hands-on experience and explore what {{< var vm.product >}} has to offer with our interactive training environment.]{.mid-gray}
 
 ::: {.nt3}
 [**Learn through doing**](/training/training.qmd){.button .button-white}
