--- a/site/index.qmd
+++ b/site/index.qmd
@@ -448,7 +448,7 @@ Setup + Administration
 Model Development
 :::
 
-[Save time by automating documentation and testing for your models using our library.]{.mid-gray .f4}
+[Save time by automating documentation and testing for your models using our {{< var vm.developer >}}.]{.mid-gray .f4}
 
 [**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button .button-green}
 :::
