Adjust heading levels

--- a/site/reference/validmind-rest-api-vm.qmd
+++ b/site/reference/validmind-rest-api-vm.qmd
@@ -22,26 +22,26 @@ The {{< var validmind.platform >}} provides a RESTful APIs to programmatically i
 - Use cases
 - Templates
 
-### Base URL
+## Base URL
 
 ```
 https://api.dev.vm.validmind.ai/vm/api/v1/
 ```
 
-### Versioning
+## Versioning
 
 This version of the API is **v1**, specified in the path (`/vm/api/v1`). Future breaking changes will be introduced under a new version path.
 
-### Authentication
+## Authentication
 
-#### Required headers
+### Required headers
 
 All API endpoints require authentication using two headers that must be included with every request:
 
 - `x-api-key`: Your ValidMind API key
 - `x-api-secret`: Your ValidMind API secret 
 
-#### Request example
+### Request example
 
 To use this cURL example, replace `API_KEY` and `API_SECRET` with your own credentials:
 
@@ -52,7 +52,7 @@ curl -X GET "https://api.validmind.com/vm/api/v1/models" \
   -H 'x-api-secret: API_SECRET'
 ```
 
-#### Get your API key and secret
+### Get your API key and secret
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
@@ -63,14 +63,14 @@ curl -X GET "https://api.validmind.com/vm/api/v1/models" \
    - Locate [api key]{.smallcaps} and click **{{< fa clipboard >}} Copy to Clipboard**.
    - Locate [secret key]{.smallcaps} and click **{{< fa clipboard >}} Copy to Clipboard**.
 
-### Data formats
+## Data formats
 
 The APIs follows REST principles and uses JSON for both requests and responses.
 
 - All endpoints consume and produce `application/json`.
 - CSV format is optionally supported for some listing endpoints using the `format=csv` query parameter.
 
-### Common response codes
+## Common response codes
 
 | Code | Meaning                      |
 |------|------------------------------|
