--- a/site/reference/validmind-rest-api-vm.qmd
+++ b/site/reference/validmind-rest-api-vm.qmd
@@ -10,6 +10,7 @@ listing:
     fields: [title, description]
     contents:
       - title: "{{< var vm.product >}} Public REST API Reference"
+        description: "Programmatically interact with models, groups, business units, use cases, and templates."
         path: vm-api.qmd
 page-layout: full
 ---
@@ -46,7 +47,7 @@ All API endpoints require authentication using two headers that must be included
 To use this cURL example, replace `API_KEY` and `API_SECRET` with your own credentials:
 
 ```
-curl -X GET "https://api.validmind.com/vm/api/v1/models" \
+curl -X GET "https://api.dev.vm.validmind.ai/vm/api/v1/models" \
   -H 'accept: application/json' \
   -H 'x-api-key: API_KEY' \
   -H 'x-api-secret: API_SECRET'
