--- a/site/index.qmd
+++ b/site/index.qmd
@@ -10,9 +10,11 @@ filters:
 listing:
   id: index-releases
   contents:
-    - ../releases/**/pr*.qmd
+    - ../releases/frontend/**/pr*.qmd
+    - ../releases/documentation/**/pr*.qmd
+    - ../releases/validmind-library/**/pr*.qmd
   include:
-    categories: "*highlight*"
+    categories: highlight
   fields: [date, title]
   sort: "date desc"
   max-description-length: 300
