--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -1,7 +1,7 @@
 ---
 title: "{{< var validmind.developer >}} releases"
-subtitle: "Latest: `v2.8.26`"
-date: "June 26, 2025"
+subtitle: "Latest: `v2.8.29`"
+date: "July 23, 2025"
 listing:
   contents: ../releases/validmind-library/**/pr-*.qmd
   fields: [date, title, categories, description]
@@ -10,7 +10,34 @@ listing:
   categories: true
   sort-ui: true
   filter-ui: true
+  page-size: 12
 page-layout: full
 --- 
 
-<!-- site/releases/validmind-library -->
+```{=html}
+<style>
+
+// Pagination at the bottom of the page
+.page-item.active .page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+li.page-item.active > a.page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+.page-item.active .page-link:hover {
+  background-color: #f78ab2 !important; /* 50% lighter */
+  border-color: #f78ab2 !important;
+  color: #333 !important; /* contrast text */
+}
+
+.toc-actions {
+  display: none !important;
+}
+</style>
+```
