--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -14,9 +14,18 @@ To review the details for workflows currently active on a specific model:
 1. Click on the tab you would like to review:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
-    - **Activity** — History of updates to the workflow on that model.
+    - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.[^notes]
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
+
+
+<!-- FOOTNOTES -->
+
+[^notes]:
+
+    Click **{{< fa chevron-down >}}** to reveal notes, and **{{< fa chevron-up >}}** to hide them.
+    <br><br>
+    [Transition model workflows](/guide/model-workflows/transition-model-workflows.qmd)
 
 ::::
 
@@ -34,7 +43,7 @@ To review the details for workflows currently active on a specific model:
 1. Click on the tab you would like to review:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
-    - **Activity** — History of updates to the workflow on that model.
+    - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
