Updating the notebooks so I can upadte release notes

--- a/site/notebooks/how_to/load_datasets_predictions.ipynb
+++ b/site/notebooks/how_to/load_datasets_predictions.ipynb
@@ -40,6 +40,11 @@
     "    - [Pass `<vm_model>` in dataset interface](#toc8_6_1_)    \n",
     "    - [Through `assign_predictions` interface](#toc8_6_2_)    \n",
     "  - [Run an example test](#toc8_7_)    \n",
+    "  - [Using `predict_fn` to store multiple columns](#toc8_8_)    \n",
+    "    - [Create enhanced predict function](#toc8_8_1_)    \n",
+    "    - [Initialize model with predict function](#toc8_8_2_)    \n",
+    "    - [Assign predictions with multiple columns](#toc8_8_3_)    \n",
+    "    - [Verify multiple columns in dataset](#toc8_8_4_)    \n",
     "- [Next steps](#toc9_)    \n",
     "  - [Work with your model documentation](#toc9_1_)    \n",
     "  - [Discover more learning resources](#toc9_2_)\n",
@@ -711,6 +716,204 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "<a id='toc8_8_'></a>\n",
+    "\n",
+    "### Using `predict_fn` to store multiple columns\n",
+    "\n",
+    "The `predict_fn` parameter in `vm.init_model()` allows you to create models that return multiple pieces of information when making predictions. This is particularly useful when you want to capture additional metadata, confidence scores, feature importance, or any other model-related information alongside the main prediction.\n",
+    "\n",
+    "By returning a dictionary from your predict function, ValidMind automatically creates separate columns for each key when you run `assign_predictions()`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "<a id='toc8_8_1_'></a>\n",
+    "\n",
+    "#### Create enhanced predict function\n",
+    "\n",
+    "Let's create a predict function that wraps our XGBoost model and returns multiple pieces of information:\n",
+    "- **prediction**: The main class prediction\n",
+    "- **prediction_proba**: The prediction probabilities for both classes\n",
+    "- **confidence**: The maximum probability as a confidence score\n",
+    "- **model_info**: Metadata about the model used\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def enhanced_xgb_predict_fn(input_data):\n",
+    "    \"\"\"\n",
+    "    Enhanced predict function that returns multiple pieces of information.\n",
+    "    \n",
+    "    Args:\n",
+    "        input_data: Input features for prediction (single row as dictionary when called by ValidMind)\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Dictionary containing prediction, probabilities, confidence, and model info\n",
+    "    \"\"\"\n",
+    "    # Define the feature columns that the model was trained on\n",
+    "    # These are the same columns from x_train (excluding the target column 'Exited')\n",
+    "    training_features = [\n",
+    "        'CreditScore', 'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts',\n",
+    "        'HasCrCard', 'IsActiveMember', 'EstimatedSalary', 'Geography_France',\n",
+    "        'Geography_Germany', 'Geography_Spain'\n",
+    "    ]\n",
+    "    \n",
+    "    # Convert dictionary input to DataFrame for model prediction\n",
+    "    # When called by ValidMind, input_data is a single row dictionary\n",
+    "    if isinstance(input_data, dict):\n",
+    "        # Filter to only include training features and convert to DataFrame\n",
+    "        filtered_data = {key: value for key, value in input_data.items() if key in training_features}\n",
+    "        input_df = pd.DataFrame([filtered_data])\n",
+    "        \n",
+    "        # Ensure all training features are present (in case some are missing)\n",
+    "        for feature in training_features:\n",
+    "            if feature not in input_df.columns:\n",
+    "                input_df[feature] = 0  # Default value for missing features\n",
+    "        \n",
+    "        # Reorder columns to match training order\n",
+    "        input_df = input_df[training_features]\n",
+    "    else:\n",
+    "        # Handle other input types (DataFrame, array, etc.)\n",
+    "        input_df = pd.DataFrame(input_data) if not isinstance(input_data, pd.DataFrame) else input_data\n",
+    "        # Filter to training features if it's a DataFrame\n",
+    "        if isinstance(input_df, pd.DataFrame):\n",
+    "            input_df = input_df[training_features]\n",
+    "    \n",
+    "    # Make predictions\n",
+    "    prediction = xgb.predict(input_df)\n",
+    "    prediction_proba = xgb.predict_proba(input_df)\n",
+    "    \n",
+    "    # Since we're processing one row at a time, extract the single values\n",
+    "    single_prediction = prediction[0] if len(prediction) > 0 else None\n",
+    "    single_proba = prediction_proba[0] if len(prediction_proba) > 0 else None\n",
+    "    \n",
+    "    # Calculate confidence as the maximum probability for this prediction\n",
+    "    confidence = np.max(single_proba) if single_proba is not None else None\n",
+    "    \n",
+    "    # Create model metadata\n",
+    "    model_info = {\n",
+    "        \"model_type\": \"XGBClassifier\",\n",
+    "        \"n_estimators\": xgb.n_estimators,\n",
+    "        \"max_depth\": xgb.max_depth,\n",
+    "        \"feature_count\": len(training_features),\n",
+    "        \"features_used\": training_features\n",
+    "    }\n",
+    "    \n",
+    "    return {\n",
+    "        \"prediction\": single_prediction,\n",
+    "        \"prediction_proba\": single_proba.tolist() if single_proba is not None else None,\n",
+    "        \"confidence\": confidence,\n",
+    "        \"model_info\": model_info\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "<a id='toc8_8_2_'></a>\n",
+    "\n",
+    "#### Initialize model with predict function\n",
+    "\n",
+    "Now we'll create a ValidMind model using the `predict_fn` parameter. This tells ValidMind to use our enhanced function instead of the model's default `predict()` method:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize ValidMind model with the enhanced predict function\n",
+    "vm_model_enhanced_xgb = vm.init_model(\n",
+    "    model=xgb,\n",
+    "    input_id=\"enhanced_xgb\",\n",
+    "    predict_fn=enhanced_xgb_predict_fn \n",
+    ")\n",
+    "\n",
+    "print(f\"Enhanced XGBoost model initialized with input_id: {vm_model_enhanced_xgb.input_id}\")\n",
+    "print(\"This model now uses the predict function that handles dictionary inputs correctly\")\n",
+    "print(\"It will return multiple columns when predictions are assigned to datasets\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "<a id='toc8_8_3_'></a>\n",
+    "\n",
+    "#### Assign predictions with multiple columns\n",
+    "\n",
+    "When we use `assign_predictions()` with our enhanced model, ValidMind will automatically create separate columns for each key returned by our predict function. Let's assign predictions to our test dataset:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a fresh dataset for this demonstration\n",
+    "vm_test_ds_enhanced = vm.init_dataset(\n",
+    "    input_id=\"test_dataset_enhanced\",\n",
+    "    dataset=test_df,\n",
+    "    target_column=demo_dataset.target_column\n",
+    ")\n",
+    "\n",
+    "# This will create multiple columns based on the keys returned by our predict function\n",
+    "vm_test_ds_enhanced.assign_predictions(model=vm_model_enhanced_xgb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc8_8_4_'></a>\n",
+    "\n",
+    "#### Verify multiple columns in dataset\n",
+    "\n",
+    "Let's examine the dataset to see all the columns that were created by our enhanced predict function. Each key from the returned dictionary becomes a separate column with the model's `input_id` as a prefix:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vm_test_ds_enhanced._df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<a id='toc9_'></a>\n",
@@ -788,9 +991,9 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ValidMind Library",
    "language": "python",
-   "name": "python3"
+   "name": "validmind"
   },
   "language_info": {
    "codemirror_mode": {
@@ -802,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
