--- a/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
+++ b/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and select the model you registered for this \"ValidMind for model development\" series of notebooks.\n",
     "\n",
-    "3. Click **Documents** > **Documentation** for your model and note how the structure of the documentation matches our preview above."
+    "3. Click **Documentation** under Documents for your model and note how the structure of the documentation matches our preview above."
    ]
   },
   {
