And another one

--- a/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
+++ b/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
@@ -930,7 +930,7 @@
     "\n",
     "#### Use cases\n",
     "\n",
-    "- [Application scorecard demo](../../code_samples/credit_risk/application_scorecard_demo.ipynb)\n",
+    "- [Document an application scorecard model](../code_samples/credit_risk/application_scorecard_full_suite.ipynb)\n",
     "- [Linear regression documentation demo](../../code_samples/regression/quickstart_regression_full_suite.ipynb)\n",
     "- [LLM model documentation demo](../../code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb)"
    ]
