Updating the notebooks so I can upadte release notes

--- a/site/notebooks/how_to/explore_tests.ipynb
+++ b/site/notebooks/how_to/explore_tests.ipynb
@@ -4369,7 +4369,7 @@
         "\n",
         "Now that you know how to browse and filter tests in the ValidMind Library, you’re ready to take the next step. Use the test IDs you’ve selected to either run individual tests or batch run them with custom test suites.\n",
         "\n",
-        "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn about the tests suites available in the Validmind Library.</b></span>\n",
+        "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn about the tests suites available in the ValidMind Library.</b></span>\n",
         "<br></br>\n",
         "Check out our <a href=\"https://docs.validmind.ai/notebooks/how_to/explore_test_suites.html\" style=\"color: #DE257E;\"><b>Explore test suites</b></a> notebook for more code examples and usage of key functions.</div>\n",
         "\n",
