--- a/site/notebooks/how_to/use_dataset_model_objects.ipynb
+++ b/site/notebooks/how_to/use_dataset_model_objects.ipynb
@@ -98,7 +98,7 @@
     "**Inputs**: Objects to be evaluated and documented in the ValidMind Library. They can be any of the following:\n",
     "\n",
     "- **model**: A single ValidMind model object that has been initialized in ValidMind with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model).\n",
-    "- **dataset**: Single Validmind dataset object that has been initialized in ValidMind with [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset).\n",
+    "- **dataset**: Single ValidMind dataset object that has been initialized in ValidMind with [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset).\n",
     "- **models**: A list of ValidMind models - usually this is used when you want to compare multiple models in your custom test.\n",
     "- **datasets**: A list of ValidMind datasets - usually this is used when you want to compare multiple datasets in your custom test. See this [example](https://docs.validmind.ai/notebooks/how_to/run_tests_that_require_multiple_datasets.html) for more information.\n",
     "\n",
