manage-finding-statuses.qmd > manage-finding-types.qmd

--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -10,8 +10,8 @@ listing:
     fields: [title, description]
     contents:
     - manage-validation-guidelines.qmd
+    - manage-finding-types.qmd
     - manage-model-finding-fields.qmd
-    - manage-finding-statuses.qmd
 ---
 
 Enable your organization to use the {{< var validmind.platform >}} for validation by setting up guidelines for validation reports and configuring options for findings to align with your organization's requirements.
