--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Manage finding statuses"
+title: "Manage finding types"
 date: last-modified
+aliases: 
+  - manage-finding-statuses.html
 ---
 
 Configure the statuses available to be assigned to findings logged on models to track the progress and resolution of findings throughout their lifecycles.
