--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -5,9 +5,20 @@ aliases:
   - manage-finding-statuses.html
 ---
 
-Configure the statuses available to be assigned to findings logged on models to track the progress and resolution of findings throughout their lifecycles.
+Customize the fields and statuses that appear on finding types available to be logged on models in your inventory.
 
-::: {.callout}
+#### Available finding types
+
+- default types
+
+## Edit finding type
+
+- name
+- desc
+- select fields that appear > customize layout
+- manage statuses
+
+<!-- ::: {.callout}
 `Open` and `Closed` are [Locked]{.bubble} stages, meaning they cannot be modified or removed.
 
 :::
@@ -50,10 +61,9 @@ Configure the statuses available to be assigned to findings logged on models to 
 ::: {.callout-important title="Finding status deletion is permanent and cannot be undone."}
 
 Findings statuses cannot be deleted if in use on a finding. Ensure that the status you're deleting is not associated with any findings before proceeding.
-:::
+::: -->
 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
- -->
+<!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
