--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -136,7 +136,7 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^3]: [Manage finding statuses](manage-finding-statuses.qmd)
+[^3]: [Manage finding types](manage-finding-types.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
