--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -9,7 +9,25 @@ Customize the fields and statuses that appear on finding types available to be l
 
 #### Available finding types
 
-- default types
+By default, the {{< var validmind.platform >}} provides three finding types:
+
+Validation Issues
+: Problems discovered during model validation that reflect errors, inconsistencies, or gaps in data, methodology, implementation, or documentation that need to be addressed before the model is considered reliable.
+
+Policy Exception
+: When a model or part of its development or usage does not comply with internal policies, regulatory requirements, or governance standards, but an explicit approval or waiver is granted to allow it under controlled conditions.
+
+Model Limitation
+: Inherent weaknesses or constraints of the model itself that cannot be fully resolved; definitions under which the model's results should be interpreted with caution.
+
+::: {.attn}
+
+## Prerequisites
+
+- [x] {{< var link.login >}}
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+
+:::
 
 ## Edit finding type
 
@@ -66,4 +84,4 @@ Findings statuses cannot be deleted if in use on a finding. Ensure that the stat
 
 <!-- FOOTNOTES -->
 
-<!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
+[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
