--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -31,47 +31,45 @@ Model Limitation
 
 ## Edit finding type
 
-- name
-- desc
-- select fields that appear > customize layout
-- manage statuses
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-<!-- ::: {.callout}
+2. Under Findings, select **Finding Types**.
+
+3. Click on the finding type[^2] you want to edit:
+
+    - Validation Issues
+    - Policy Exception
+    - Model Limitation
+
+4. Make your desired changes to the finding type's details:
+
+    - **[name]{.smallcaps}**
+    - **[description]{.smallcaps}**
+    - **[fields]{.smallcaps}** — Select the default finding fields that should appear on this type of finding.[^3]
+    - **[finding statuses]{.smallcaps}** — Configure the statuses available to this finding type.[^4]
+
+### Manage finding type statuses
+
+::: {.callout}
 `Open` and `Closed` are [Locked]{.bubble} stages, meaning they cannot be modified or removed.
 
 :::
 
-::: {.attn}
+::: {.panel-tabset}
 
-## Prerequisites
+#### Add finding statuses
 
-- [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+a. Click **{{< fa plus >}} Add Status**.
 
-:::
+b. Enter in a **[name]{.smallcaps}** and assign a **[color]{.smallcaps}** to your finding status.
 
-## Add finding statuses
+c. When you are done, click **Add Status** to create your new status.
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+#### Edit or delete statuses
 
-2. Under Findings, select **Finding Statuses**.
+a. Hover over the finding status you'd like to modify.
 
-3. Click **{{< fa plus >}} Add Finding Status**.
-
-4. Enter in a **[name]{.smallcaps}** and assign a **[color]{.smallcaps}** to your finding status.
-
-5. When you are done, click **Add Finding Status** to create your new status.
-
-
-## Edit or delete statuses
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Findings, select **Finding Statuses**.
-
-3. Hover over the finding status you'd like to modify.
-
-4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select:
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select:
 
     - **{{< fa pencil >}} Edit Details** to change the **[name]{.smallcaps}** or **[color]{.smallcaps}** of the status.
     - [**{{< fa trash-can >}} Delete Status**]{.red} to remove the status.
@@ -79,9 +77,17 @@ Model Limitation
 ::: {.callout-important title="Finding status deletion is permanent and cannot be undone."}
 
 Findings statuses cannot be deleted if in use on a finding. Ensure that the status you're deleting is not associated with any findings before proceeding.
-::: -->
+:::
+
+:::
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Available finding types](#available-finding-types)
+
+[^3]: test
+
+[^4]: [Manage finding type statuses](#manage-finding-type-statuses)
