Draft manage-finding-types.qmd

--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -88,6 +88,6 @@ Findings statuses cannot be deleted if in use on a finding. Ensure that the stat
 
 [^2]: [Available finding types](#available-finding-types)
 
-[^3]: test
+[^3]: To further customize fields on finding types, refer to: [Manage model finding fields](manage-model-finding-fields.qmd)
 
 [^4]: [Manage finding type statuses](#manage-finding-type-statuses)
