--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -155,7 +155,7 @@ Deletion of saved views is permanent.
 
 [^6]:
 
-   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd)
+   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
    - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
    - [**[risk area]{.smallcaps}**](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
    - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
