--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -88,6 +88,11 @@ Findings statuses cannot be deleted if in use on a finding. Ensure that the stat
 
 [^2]: [Available finding types](#available-finding-types)
 
-[^3]: To further customize fields on finding types, refer to: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^3]:
+
+    ::: {.callout title="Only default fields are available to be selected in this view."}
+    To further customize fields displayed on finding types, refer to: [Manage model finding fields](manage-model-finding-fields.qmd)
+
+    :::
 
 [^4]: [Manage finding type statuses](#manage-finding-type-statuses)
