--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -5,7 +5,7 @@ aliases:
   - manage-finding-statuses.html
 ---
 
-Customize the fields and statuses that appear on finding types available to be logged on models in your inventory.
+Prepare to track the progress and resolution of findings by customizing finding types and their associated statuses available to be logged on models in your inventory.
 
 #### Available finding types
 
