--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -3,7 +3,7 @@ title: "Manage model finding fields"
 date: last-modified
 ---
 
-Manage the fields that appear on findings logged on your models. Choose from an array of field types with different properties and use cases.
+Manage the fields that appear on all finding types logged on your models. Choose from an array of field types with different properties and use cases.
 
 ::: {.attn}
 
