--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -3,26 +3,20 @@ To view findings for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-   In the page that opens is a list of all model findings, including information for:
+1. Select a finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view:
 
-   - [title]{.smallcaps}
-   - [creation date]{.smallcaps}
-   - [business unit]{.smallcaps}
-   - [risk area]{.smallcaps}
-   - [severity]{.smallcaps}
-   - [status]{.smallcaps}
-   - [inventory model]{.smallcaps}
-   - [assigned to]{.smallcaps}
-   - [due date]{.smallcaps}
+   - Validation Issues
+   - Policy Exception
+   - Model Limitation
 
-   ![List of findings across all models](/guide/model-validation/all-model-findings.png){fig-alt="A screenshot showing a list of findings across all models" .screenshot}
+   In the page that opens is a list of all model findings for that type.
 
-::: {.callout}
-Filter this list to include only findings you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)] or toggle visibilty for column headers.^[[Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)]
+   ::: {.callout}
+   Filter this list to include only findings you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)] or toggle visibilty for column headers.^[[Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)]
 
-:::
+   :::
 
-2. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.^[[Manage supporting documentation](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation)]
+1. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.^[[Manage supporting documentation](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation)]
 
    Attachments are listed with the following information:
 
@@ -42,17 +36,13 @@ To view findings for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-   In the page that opens is a list of all model findings, including information for:
+1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view:
 
-   - [title]{.smallcaps}
-   - [creation date]{.smallcaps}
-   - [business unit]{.smallcaps}
-   - [risk area]{.smallcaps}
-   - [severity]{.smallcaps}
-   - [status]{.smallcaps}
-   - [inventory model]{.smallcaps}
-   - [assigned to]{.smallcaps}
-   - [due date]{.smallcaps}
+   - Validation Issues
+   - Policy Exception
+   - Model Limitation
+
+   In the page that opens is a list of all model findings for that type.
 
     [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings){target="_blank"} to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout){target="_blank"}.
 
