Edit: View model-specific findings

--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -3,7 +3,7 @@ To view findings for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-1. Select a finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view:
+1. Select a finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
 
    - Validation Issues
    - Policy Exception
@@ -36,7 +36,7 @@ To view findings for all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view:
+1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view from the tabs:
 
    - Validation Issues
    - Policy Exception
