--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -36,21 +36,15 @@ To view findings linked to a specific model:
 
 3. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
 
-   In the page that opens is a list of findings associated with that particular model, including information for:
+4. Select a finding type[^5] to view from the tabs:
 
-   - [title]{.smallcaps}
-   - [creation date]{.smallcaps}
-   - [business unit]{.smallcaps}
-   - [risk area]{.smallcaps}
-   - [severity]{.smallcaps}
-   - [status]{.smallcaps}
-   - [inventory model]{.smallcaps}
-   - [assigned to]{.smallcaps}
-   - [due date]{.smallcaps}
+   - Validation Issues
+   - Policy Exception
+   - Model Limitation
 
-   ![List of findings specific to a model](model-specific-findings.png){fig-alt="A screenshot showing a list of findings specific to a model" .screenshot}
+   In the page that opens is a list of all model findings for that type.
 
-4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^5]
+4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^6]
 
    Attachments are listed with the following information:
 
@@ -80,7 +74,7 @@ To narrow down the findings, you can apply some filters:
 
 2. Click **{{< fa filter >}} Filter**.
 
-3. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^6]
+3. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^7]
 
    For example, to filter by open findings for the Customer Churn Model assigned to Jane Doe:
 
@@ -106,9 +100,9 @@ Customize what is displayed on your list of all model findings:
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your model finding fields.[^7]
+   - Available columns are determined by your model finding fields.[^8]
 
-Once customized, you can save a view for later application.[^8]
+Once customized, you can save a view for later application.[^9]
 
 ### Manage custom findings views
 
@@ -122,9 +116,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^9]
+1. Customize a findings layout.[^10]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^10]
+   You can also apply filters or sorting before saving your view to include them in the view.[^11]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -151,9 +145,13 @@ Deletion of saved views is permanent.
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
+[^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^6]:
+<!-- HERE -->
+
+[^6]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
+
+[^7]:
 
    - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
    - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
@@ -162,10 +160,10 @@ Deletion of saved views is permanent.
    - **[severity]{.smallcaps}**
    - **[assigned to]{.smallcaps}**
 
-[^7]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^8]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
-[^8]: [Manage custom findings views](#manage-custom-findings-views)
+[^9]: [Manage custom findings views](#manage-custom-findings-views)
 
-[^9]: [Customize model findings layout](#customize-model-findings-layout)
+[^10]: [Customize model findings layout](#customize-model-findings-layout)
 
-[^10]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^11]: [Filter and sort model findings](#filter-and-sort-model-findings)
